kubernetes/media/prowlarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: pve1
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: prowlarr
        image: ghcr.io/home-operations/prowlarr:2.3.0
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: prowlarr
      - name: media
        persistentVolumeClaim:
          claimName: media
