kubernetes/media/prowlarr/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: prowlarr
spec:
  serviceName: prowlarr
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: pve2
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: prowlarr
        image: ghcr.io/home-operations/prowlarr:2.3.0
        livenessProbe:
          httpGet:
            path: /ping
            port: 9696
          initialDelaySeconds: 30
          timeoutSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: prowlarr
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: proxmox
      resources:
        requests:
          storage: 1Gi
