kubernetes/media/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
spec:
  parentRefs:
  - name: cilium
    namespace: cilium
  hostnames:
  - prowlarr.cecobask.com
  rules:
  - backendRefs:
    - name: prowlarr
      port: 80
